Cron Job is running clearly but about mail must be fix

--- a/resource/hbs/mailDeadline_template.hbs
+++ b/resource/hbs/mailDeadline_template.hbs
@@ -17,7 +17,7 @@
 			<div>
 				<p
 					style="margin: 0;line-height: 140%; text-align: left; font-size: 18px; padding: 7px 0 0 0; font-family: arial, helvetica, sans-serif">
-					Hi {{email}}!!!
+					Hi {{emailUser}}!!!
 				</p>
 				<p
 					style="margin: 0 0 15px 0 ;font-size: 14px; line-height: 140%; text-align: left; font-family: arial, helvetica, sans-serif">
