--- a/resource/hbs/mailDeadline_template.hbs
+++ b/resource/hbs/mailDeadline_template.hbs
@@ -17,7 +17,7 @@
 			<div>
 				<p
 					style="margin: 0;line-height: 140%; text-align: left; font-size: 18px; padding: 7px 0 0 0; font-family: arial, helvetica, sans-serif">
-					Hi {{name}}
+					Hi {{taskDetail.name}}
 				</p>
 				<p
 					style="margin: 0 0 15px 0 ;font-size: 14px; line-height: 140%; text-align: left; font-family: arial, helvetica, sans-serif">
@@ -27,13 +27,13 @@
 
 			<div style="text-align: left; width: 100%; line-height: 30px; font-size: 14px;">
 				<div style="width: 100%; height: 2px; background-color: #8f8b8b; opacity: 0.3;"></div>
-                {{#each tasks}}
+				{{#each taskDetail.tasks}}
 				<div style="padding: 2px 0 0 0;">
 					<div><strong>{{ this.title }}</strong></div>
 					<div>{{ this.description }}</div>
 					<div>Due Date: {{ this.duedate }}</div>
 				</div>
-                {{/each}}
+				{{/each}}
 			</div>
 
 			<div>
