--- a/resource/hbs/mailDeadline_template.hbs
+++ b/resource/hbs/mailDeadline_template.hbs
@@ -8,12 +8,12 @@
 </head>
 
 <body
-	style="margin: 0; padding: 0; width: 100%; box-sizing: border-box; display: flex; justify-content: center; align-items: center">
+	style="margin: 0; padding: 0; box-sizing: border-box;">
 	<div style="width: 100%; background-color: #EEEEEE;">
 		<div style="text-align: center">
 			<img src="cid:logo@image.cid" style="width: 150px; padding-top: 10px">
 		</div>
-		<div style="margin: 0 auto; max-width: 500px; min-width: 320px; display: block;">
+		<div style="margin: 0 auto; max-width: 500px; min-width: 320px;">
 			<div>
 				<p
 					style="margin: 0;line-height: 140%; text-align: left; font-size: 18px; padding: 7px 0 0 0; font-family: arial, helvetica, sans-serif">
@@ -26,11 +26,11 @@
 			</div>
 
 			<div style="text-align: left; width: 100%; line-height: 30px; font-size: 14px;">
-				<div style="width: 100%; height: 2px; background-color: #8f8b8b; opacity: 0.3;"></div>
 				{{#each taskDetail.tasks}}
+				<div style="width: 100%; height: 2px; background-color: #8f8b8b; opacity: 0.3;"></div>
 				<div style="padding: 2px 0 0 0;">
-					<div><strong>{{ this.title }}</strong></div>
-					<div>{{ this.description }}</div>
+					<div><strong>Title: {{ this.title }}</strong></div>
+					<div>Description: {{ this.description }}</div>
 					<div>Due Date: {{ this.duedate }}</div>
 				</div>
 				{{/each}}
@@ -38,7 +38,7 @@
 
 			<div>
 				<p
-					style="margin: 0 0 10px 0 ;font-size: 14px; line-height: 20px; text-align: left; font-family: arial, helvetica, sans-serif">
+					style="margin: 0 0 50px 0 ;font-size: 14px; line-height: 20px; text-align: left; font-family: arial, helvetica, sans-serif">
 					Please complete the above tasks early to keep up with progress.
 				</p>
 			</div>
