Fix cron job send mail and add api filter status

--- a/resource/hbs/mailDeadline_template.hbs
+++ b/resource/hbs/mailDeadline_template.hbs
@@ -253,7 +253,7 @@
 																			style="word-break: break-word; padding-left: 16px; padding-right: 16px; font-size: 20px; display: inline-block; letter-spacing: normal;"><span
 																				style="word-break: break-word;"><span
 																					data-mce-style=""
-																					style="word-break: break-word; line-height: 30px;">Apply</span></span></span>
+																					style="word-break: break-word; line-height: 30px;">Do it now</span></span></span>
 																	</div>
 																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
 																</div>
